<resources>
    <string name="title_text">Sharinf</string>
    <string name="signed_out">Signed out</string>
    <string name="desc_sharinf_icon">SHarinf Logo</string>
    <string name="loading">Loading…</string>

    <string name="app_name">Sharinf</string>
    <string name="title_activity_PeopleInSession">People in Session</string>
    <string name="title_activity_session">Session</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="no_session">There is no open session&#8230;\nClick the action button to search nearby beacons!</string>
    <string name="ble_not_supported">Your device doens\'t support BLE&#8230;</string>
    <string name="search_beacons">Search Our Beacons!</string>
    <string name="unknown_device">Unknown device???</string>

    <string name="action_createSession">Create Session</string>
    <string name="action_SessionSettings">Session Settings</string>
    <string name="title_activity_session_settings">Settings</string>
    <string name="action_help">Help!</string>
    <string name="action_about">About</string>

    <string name="session_type">Session Type:</string>
    <string name="who_shares">Who Shares:</string>
    <string name="dist_close">Close</string>
    <string name="dist_far">Far</string>
    <string name="distance">Distance:</string>
    <string name="session_name">Session Name:</string>
    <string name="ok">Ok</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
    </string-array>

    <string name="failed_session_create">Couldn\'t create session&#8230;</string>
    <string name="success_session_create">Session created!</string>

    <string name="login_failed">Login failed&#8230;</string>
    <string name="login_successful">Login successful!</string>

    <string name="beacon_state_occupied">Occupied</string>
    <string name="beacon_state_free">Free</string>
    <string name="beacon_state_open">Open</string>
    <string name="beacon_state_unknown">Unknown</string>
</resources>
