<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.david.sharing.CreateSessionActivity"
    android:id="@+id/root"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/session_name"
                    android:id="@+id/textView5" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/session_name_edit"
                    android:layout_below="@+id/textView5"
                    android:inputType="text" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="21dp"
                    android:layout_below="@+id/session_name_edit" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/session_type"
                    android:id="@+id/session_type"
                    android:layout_alignParentStart="true"
                    android:textAlignment="viewStart" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/type_spinner"
                    android:spinnerMode="dropdown"
                    android:layout_alignParentEnd="true" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="21dp"
                    android:layout_below="@+id/type_spinner" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/who_shares"
                    android:id="@+id/who_shares"
                    android:layout_alignParentStart="true"
                    android:textAlignment="viewStart" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/who_spinner"
                    android:spinnerMode="dropdown"
                    android:layout_alignParentEnd="true" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="21dp"
                    android:layout_below="@+id/who_spinner" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/distance"
                    android:id="@+id/textView4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/dist_close"
                    android:id="@+id/textView2"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/dist_far"
                    android:id="@+id/textView3"
                    android:layout_below="@+id/textView4"
                    android:layout_alignParentEnd="true" />

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBar"
                    android:layout_below="@+id/textView2"
                    android:max="2"
                    android:indeterminate="false" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="21dp"
                    android:layout_below="@+id/seekBar" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:id="@+id/Ok_button"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
